--- a/index.html
+++ b/index.html
@@ -34,7 +34,13 @@
         </div>
         <div class="navbar__s3">
             <p>Courses</p>
-            <p>My Learnings</p>
+            <!-- <p>My Learnings</p> -->
+             <div class="mylearning">
+                <p>My Learnings</p>
+                <div class="mylearning__popup">
+                    <p>You have not purchased anything yet</p>
+                </div>
+             </div>
             <i class="fa-solid fa-cart-shopping" style="color: #000000;"></i>
             <i class="fa-solid fa-bell" style="color: #000000;"></i>
             <i class="fa-solid fa-user" style="color: #000000;"></i>
@@ -54,6 +60,10 @@
     <!--Sale Image-->
     <div class="sale-image">
         <img src="./Images/sale-image.jpg" alt="Sale Image">
+        <div class="sale-image__offer">
+            <h2>Udemy Flash Sale! 24 hours to save</h2>
+            <p>Get the top courses for just 499. Just one day to save but a lifetime to learn</p>
+        </div>
     </div>
 
     <!--Recommended-->
