--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         </div>
         <div class="navbar__s3">
             <p>Courses</p>
+
             <!-- <p>My Learnings</p> -->
              <div class="mylearning">
                 <p>My Learnings</p>
@@ -44,6 +45,11 @@
             <i class="fa-solid fa-cart-shopping" style="color: #000000;"></i>
             <i class="fa-solid fa-bell" style="color: #000000;"></i>
             <i class="fa-solid fa-user" style="color: #000000;"></i>
+        </div>
+
+        <!--Menubar-->
+        <div class="navbar__s4">
+            <i class="fa-solid fa-bars" style="color: #000000;"></i>
         </div>
     </div>
 
